feat: 集成 OpenTelemetry + Jaeger V3, 重构 BizContext 线程上下文
- 引入 OpenTelemetry SDK + Jaeger Exporter 依赖, 配置 OTLP 采集 + Jaeger V3 HTTP API
- 新增 BizContext (ScopedValue) 替代 ScopedThreadContext, 支持 OTel Baggage 自动同步
- 新增 TaskDecorator 统一线程池上下文传播 (OTel Context + BizContext)
- 重写 Jaeger 集成测试: V3 API (query.num_traces, String body + Jackson 解析)
- 使用 jaegertracing/jaeger:2.17.0 镜像, 移除废弃的 COLLECTOR_OTLP_ENABLED
- 增强 LoggingConfigure: traceId/spanId MDC 注入 + request-path 指标属性
- 归档 OpenSpec 变更: rename-clients-to-components, bizcontext-taskdecorator-refactor, integrate-opentelemetry-jaeger
- 全量测试通过: 526 tests, 0 failures, JaCoCo 覆盖率达标